# arachne

./: .gitignore  LICENSE  README.md  agent_with_langchain.ipynb  package-lock.json  package.json  pyproject.toml  script.py  steps.json  tsconfig.json
arachne/: agent.py  exceptions.py  main.py  pyproject.toml  tags.ts  text_format.py
arachne/browser/: __init__.py  actions.py  base.py  manager.py  state.py  task.py
arachne/llm/: aws.py  cortex.py
